--- a/style.css
+++ b/style.css
@@ -26,7 +26,16 @@ body {
   padding: 1px 0;
 }
 
-.tier::before {
+.tier {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: var(--bg);
+  height: 87px;
+  gap: 1em;
+  margin: 5px;
+}
+
+.tier > label {
   display: inline-block;
   width: 2ch;
   flex-shrink: 0;
@@ -35,11 +44,12 @@ body {
   text-align: center;
 }
 
-.tier {
+.tier > .items {
+  flex-grow: 1;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   background-color: var(--bg);
-  height: 87px;
+  height: 100%;
   gap: 1em;
   margin: 5px;
 }
@@ -55,14 +65,6 @@ img {
 img:active {
   cursor: grabbing;
 }
-
-#tier-S::before { content: "S"; background: #e04; }
-#tier-A::before { content: "A"; background: #f74; }
-#tier-B::before { content: "B"; background: #fd3; }
-#tier-C::before { content: "C"; background: #3e5; }
-#tier-D::before { content: "D"; background: #1af; }
-#tier-E::before { content: "E"; background: #64f; }
-#tier-F::before { content: "F"; background: #f4b; }
 
 hr {
   margin: 2em;
