Change color palette

--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 :root {
-  --bg:   hsl(345, 12%, 5%);
-  --bg-2: hsl(345, 17%, 9%);
-  --fg: #bbb;
   --row-height: 85px;
 
-  --S: #e01c19;
-  --A: #e96432;
-  --B: #ffb93b;
-  --C: #1cb254;
-  --D: #00a5fd;
-  --E: #5625d2;
-  --F: #9825d2;
+  --bg: #120B0A;
+  --bg-2: #211513;
+  --bg-3: #2B1B18;
+  --bg-4: #3B2621;
+  --fg: #FFD8CF;
+
+  --S: #FF3B2B;
+  --A: #FF772B;
+  --B: #FFB22B;
+  --C: #BFA42B;
+  --D: #80A46B;
+  --E: #808895;
+  --F: #BF4D80;
 }
 
 *,
