--- a/style.css
+++ b/style.css
@@ -85,9 +85,9 @@ button:active {
 .tier {
   display: flex;
   flex-wrap: nowrap;
-  background-color: var(--bg-2);
   border-radius: 5px;
   overflow: hidden;
+  background-color: var(--bg-2);
   min-height: var(--row-height);
   gap: 10px;
   margin: 5px 0;
@@ -111,6 +111,7 @@ button:active {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
+  background-color: inherit;
 }
 
 img {
@@ -127,6 +128,10 @@ img:hover {
 img:active {
   filter: opacity(0.5);
   cursor: grabbing;
+}
+
+.hover {
+  filter: brightness(1.2);
 }
 
 hr {
